# Grid2OpPowerModelsBackend

./: MANIFEST.in  PowerModelsBackend.py  README.md  pyproject.toml
.github/workflows/: build_shared_object.yaml  pypi.yaml
PowerModelsLibrary/: PowerModelsLibrary.jl  Project.toml
src/PowerModelsBackend/: PowerModelsBackend.py
