[project]
name = "Grid2OpPowerModelsBackend"
description = "A PowerModels Backend for Grid2Op"
authors = [
    { name = "Katarzyna Rachwal", email = "kasiarachwal@gmail.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
dynamic = ["version"]
[project.urls]
repository = "https://github.com/gt-sse-center/Grid2OpPowerModelsBackend"

[build-system]
requires = [
    "setuptools",
    "setuptools-scm",
    "wheel",
    "pip"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
[tool.setuptools]

test = [
    "pytest"
]
