[project]
name = "Grid2OpPowerModelsBackend"
description = "A PowerModels Backend for Grid2Op"
authors = [
    { name = "Katarzyna Rachwal", email = "kasiarachwal@gmail.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
dynamic = ["version"]
[project.urls]
repository = "https://github.com/gt-sse-center/Grid2OpPowerModelsBackend"

[build-system]
requires = [
    "setuptools",
    "setuptools-scm",
    "wheel",
    "pip"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

[tool.setuptools]
packages = ["Grid2OpPowerModelsBackend"]

[tool.setuptools.package-data]
Grid2OpPowerModelsBackend = [
    "libs/linux/libjulia.so",
    "libs/macos/libjulia.dylib",
    "libs/windows/libjulia.dll"
]
# "PowerModelsLibrary.libpowermodels.lib.julia" = ["*"]
[tool.setuptools.include-package-data]
# ensure shared lib binaries are included in the package
include-package-data = true