[project]
name = "Grid2OpPowerModelsBackend"
description = "A PowerModels Backend for Grid2Op"
authors = [
    { name = "Katarzyna Rachwal", email = "kasiarachwal@gmail.com" }
]
keywords = ["grid2op", "powermodels", "backend"]
readme = "README.md"
license = { file = "LICENSE" }
dynamic = ["version"]
[project.urls]
repository = "https://github.com/gt-sse-center/Grid2OpPowerModelsBackend"

[build-system]
requires = [
    "setuptools",
    "setuptools-scm",
    "wheel",
    "pip"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

[tool.setuptools.package-data]
PowerModelsBackend = ["shared_objects/libpowermodels/**/*"]

[tool.setuptools.exclude-package-data]
PowerModelsBackend = ["__pycache__/*", "*.pyc", "*.pyo"]